--- a/Atividade-1.html
+++ b/Atividade-1.html
@@ -1,12 +1,15 @@
 <html>
-<body>
+<body class="light-theme">
+    <button id="toggle-theme">🌙 Modo Escuro</button>
     <head>
         <style>
             body {
-                background-color: #f8f8f2
+                background-color: #F5F5F5
             }
         </style>
         <title>Matheus Galvão</title>
+        <link rel="stylesheet" href="style.css">
+        <script defer src="script.js"></script>
     </head>
 
 <center><h1> Matheus Galvão <br>
